--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -90,9 +90,54 @@
         <item name="android:layout_weight">4</item>
         <item name="android:textSize">14sp</item>
         <item name="android:gravity">center</item>
+    </style>
 
-
-
+    <style name="SingleGameNameTextViewStyle" parent="Widget.AppCompat.TextView">
+        <item name="android:text">Oyuncu</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:padding">4dp</item>
+        <item name="android:textStyle">bold</item>
 
     </style>
+
+    <style name="SingleGameTotalScoreTextViewStyle" parent="Widget.AppCompat.TextView">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:hint">@string/total</item>
+        <item name="android:textColorHint">@color/white</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:padding">4dp</item>
+    </style>
+
+    <style name="SingleGameEditTextStyle2" parent="Widget.AppCompat.EditText" >
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_margin">8dp</item>
+        <item name="android:backgroundTint">@color/white</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textColorHint">@color/white</item>
+        <item name="android:inputType">text</item>
+        <item name="android:importantForAutofill">no</item>
+    </style>
+
+    <style name="SingleGameVerticalSeperatorTextViewStyle" parent="Widget.AppCompat.TextView">
+        <item name="android:layout_width">1dp</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:background">@color/white</item>
+        <item name="android:layout_margin">8dp</item>
+    </style>
+
+    <style name="SingleGameLayoutStyle">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">5</item>
+        <item name="android:orientation">vertical</item>
+
+    </style>
+
+
 </resources>
