--- a/app/src/main/res/drawable/custom_button.xml
+++ b/app/src/main/res/drawable/custom_button.xml
@@ -3,7 +3,7 @@
 
     <item >
         <shape android:shape="rectangle">
-            <solid android:color="@color/white"/>
+            <solid android:color="@color/main_background_color"/>
             <corners android:radius="16dp" />
             <stroke android:width="1dp" android:color="@color/red" />
         </shape>
