--- a/app/src/main/res/drawable/custom_cardview.xml
+++ b/app/src/main/res/drawable/custom_cardview.xml
@@ -3,17 +3,17 @@
 
     <item android:state_enabled="true" android:state_focused="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/black" />
+            <solid android:color="@color/main_background_color" />
             <corners android:radius="10dp" />
-            <stroke android:width="1dp" android:color="@color/white" />
+            <stroke android:width="1dp" android:color="@color/main_title_color" />
         </shape>
     </item>
 
     <item android:state_enabled="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/black" />
+            <solid android:color="@color/main_background_color" />
             <corners android:radius="10dp" />
-            <stroke android:width="1dp" android:color="@color/white" />
+            <stroke android:width="1dp" android:color="@color/main_title_color" />
         </shape>
     </item>
 
