--- a/app/src/main/res/drawable/custom_edittext.xml
+++ b/app/src/main/res/drawable/custom_edittext.xml
@@ -8,7 +8,7 @@
         <shape android:shape="rectangle">
             <solid android:color="#00000000" />
             <size android:height="1dp" />
-            <stroke android:width="1dp" android:color="@color/white" />
+            <stroke android:width="1dp" android:color="@color/main_background_color" />
         </shape>
     </item>
 
