--- a/app/src/main/res/drawable/custom_layout_border.xml
+++ b/app/src/main/res/drawable/custom_layout_border.xml
@@ -3,7 +3,7 @@
     <solid android:color="#000000" />
     <stroke
         android:width="1dp"
-         android:color="@color/white" />
+         android:color="@color/main_background_color" />
     <corners
         android:radius="12dp" />
 </shape>
