--- a/app/src/main/res/drawable/vertical_line.xml
+++ b/app/src/main/res/drawable/vertical_line.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- vertical_line.xml -->
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:left="-1dp" android:right="-1dp">
         <shape android:shape="rectangle">
-            <solid android:color="@color/white" />
+            <solid android:color="@color/main_title_color" />
             <size android:width="2dp" />
         </shape>
     </item>
