--- a/app/src/main/res/layout/finished_game_partner_item.xml
+++ b/app/src/main/res/layout/finished_game_partner_item.xml
@@ -20,7 +20,7 @@
             android:layout_weight="1"
             android:gravity="center"
             android:text="@string/team1"
-            android:textColor="@color/white"
+            android:textColor="@color/main_title_color"
             android:textSize="24sp"
             android:textStyle="bold"/>
 
@@ -31,7 +31,7 @@
             android:layout_weight="1"
             android:gravity="center"
             android:text="@string/team2"
-            android:textColor="@color/white"
+            android:textColor="@color/main_title_color"
             android:textSize="24sp"
             android:textStyle="bold" />
 
@@ -49,7 +49,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/_0"
-            android:textColor="@color/white"
+            android:textColor="@color/main_title_color"
             android:textSize="18sp"
             android:textStyle="bold"
             android:gravity="center"/>
@@ -57,7 +57,7 @@
         <TextView
             android:layout_width="1dp"
             android:layout_height="match_parent"
-            android:background="#FFFFFF"/>
+            android:background="@color/main_title_color"/>
 
         <TextView
             android:id="@+id/team2TotalScore"
@@ -65,7 +65,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/_0"
-            android:textColor="@color/white"
+            android:textColor="@color/main_title_color"
             android:textSize="18sp"
             android:textStyle="bold"
             android:gravity="center"/>
@@ -77,7 +77,7 @@
         android:layout_height="1dp"
         android:layout_marginTop="16dp"
 
-        android:background="#FFFFFF"/>
+        android:background="@color/main_title_color"/>
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -88,14 +88,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/game_info"
-            android:textColor="@color/white"
+            android:textColor="@color/main_title_color"
             android:textSize="12sp"
             android:layout_marginTop="8dp"/>
 
 
         <TextView
             android:id="@+id/gameDate"
-            android:textColor="@color/white"
+            android:textColor="@color/main_title_color"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/date"
