--- a/app/src/main/res/layout/finished_game_single_item.xml
+++ b/app/src/main/res/layout/finished_game_single_item.xml
@@ -13,7 +13,7 @@
         android:text="@string/game_info_okey"
         android:textStyle="bold"
         android:textSize="18sp"
-        android:textColor="@color/white"
+        android:textColor="@color/main_title_color"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="8dp"/>
 
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         android:text="@string/date_info"
         android:textSize="16sp"
-        android:textColor="@color/white"
+        android:textColor="@color/main_title_color"
         android:layout_below="@id/gameInfo"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="16dp"/>
@@ -33,7 +33,7 @@
         android:layout_below="@id/gameDate"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#FFFFFF"/>
+        android:background="@color/main_title_color"/>
 
     <LinearLayout
         android:layout_marginTop="8dp"
@@ -53,7 +53,7 @@
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:text="@string/player_name"
-                android:textColor="@color/white"
+                android:textColor="@color/main_title_color"
                 android:textStyle="bold" />
 
             <TextView
@@ -61,7 +61,7 @@
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:text="@string/total_score"
-                android:textColor="@color/white"
+                android:textColor="@color/main_title_color"
                 android:textStyle="bold" />
 
         </LinearLayout>
@@ -76,8 +76,8 @@
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="1dp"
-                android:textColor="@color/white"
-                android:background="@color/white"
+                android:textColor="@color/main_title_color"
+                android:background="@color/main_title_color"
                 android:textStyle="bold" />
             <TextView
                 android:layout_weight="1"
@@ -88,8 +88,8 @@
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="1dp"
-                android:textColor="@color/white"
-                android:background="@color/white"
+                android:textColor="@color/main_title_color"
+                android:background="@color/main_title_color"
                 android:textStyle="bold" />
             <TextView
                 android:layout_weight="1"
@@ -109,7 +109,7 @@
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:text="@string/player"
-                android:textColor="@color/white"
+                android:textColor="@color/main_title_color"
                 android:textStyle="bold" />
 
             <TextView
@@ -118,7 +118,7 @@
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:text="@string/_120"
-                android:textColor="@color/white"
+                android:textColor="@color/main_title_color"
                 android:textStyle="bold" />
 
         </LinearLayout>
@@ -135,7 +135,7 @@
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:text="@string/player"
-                android:textColor="@color/white"
+                android:textColor="@color/main_title_color"
                 android:textStyle="bold" />
 
             <TextView
@@ -144,7 +144,7 @@
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:text="@string/_120"
-                android:textColor="@color/white"
+                android:textColor="@color/main_title_color"
                 android:textStyle="bold" />
 
         </LinearLayout>
@@ -160,7 +160,7 @@
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:text="@string/player"
-                android:textColor="@color/white"
+                android:textColor="@color/main_title_color"
                 android:textStyle="bold" />
 
             <TextView
@@ -169,7 +169,7 @@
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:text="@string/_120"
-                android:textColor="@color/white"
+                android:textColor="@color/main_title_color"
                 android:textStyle="bold" />
 
         </LinearLayout>
@@ -185,7 +185,7 @@
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:text="@string/player"
-                android:textColor="@color/white"
+                android:textColor="@color/main_title_color"
                 android:textStyle="bold" />
 
             <TextView
@@ -194,7 +194,7 @@
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:text="@string/_120"
-                android:textColor="@color/white"
+                android:textColor="@color/main_title_color"
                 android:textStyle="bold" />
 
         </LinearLayout>
