--- a/app/src/main/res/layout/fragment_finished_partner_game_detail.xml
+++ b/app/src/main/res/layout/fragment_finished_partner_game_detail.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
+    android:background="@color/main_title_color"
     tools:context=".ui.finishedPartnerGameDetail.FinishedGameDetailFragment">
 
     <androidx.appcompat.widget.Toolbar
@@ -32,7 +32,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_toEndOf="@+id/goToFinishedGameFragment"
                 android:text="@string/game_detail"
-                android:textColor="@color/white"
+                android:textColor="@color/button_text_color"
                 android:textSize="16sp"
                 android:textStyle="bold" />
         </RelativeLayout>
@@ -68,7 +68,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/teamNames"
-                        android:textColor="@color/white"
+                        android:textColor="@color/button_text_color"
                         android:layout_marginStart="110dp"
                         android:layout_marginBottom="8dp"
                         android:textStyle="bold"
@@ -129,7 +129,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/round_scores"
-                        android:textColor="@color/white"
+                        android:textColor="@color/button_text_color"
                         android:layout_marginStart="135dp"
                         android:layout_marginBottom="8dp"
                         android:textStyle="bold"
@@ -155,7 +155,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/detail"
-                    android:textColor="@color/white"
+                    android:textColor="@color/button_text_color"
                     android:layout_marginStart="135dp"
                     android:layout_marginBottom="8dp"
                     android:textStyle="bold"
@@ -166,7 +166,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/detail"
-                    android:textColor="@color/white"
+                    android:textColor="@color/button_text_color"
                     android:layout_marginBottom="8dp"
                     android:textStyle="bold" />
                 <TextView
@@ -175,7 +175,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/date"
-                    android:textColor="@color/white"
+                    android:textColor="@color/button_text_color"
                     android:layout_marginBottom="8dp"
                     android:textStyle="bold" />
 
