--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,8 +6,8 @@
         <item name="android:paddingStart">8dp</item>
         <item name="android:layout_marginStart">8dp</item>
         <item name="android:padding">5dp</item>
-        <item name="android:textColor">@color/white</item>
-        <item name="android:textColorHint">@color/white</item>
+        <item name="android:textColor">@color/main_title_color</item>
+        <item name="android:textColorHint">@color/main_title_color</item>
         <item name="android:background">@drawable/custom_edittext</item>
         <item name="android:layout_gravity">center</item>
         <item name="android:inputType">numberSigned</item>
@@ -79,7 +79,7 @@
         <item name="android:maxLength">4</item>
 
     </style>
-    c
+
     <style name="SingleGameEditTextStyle2" parent="Widget.AppCompat.EditText" >
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
